tests/miniJava/neg/005034_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] String java ) { return 0 ; } }
